--- a/web/listStyle.css
+++ b/web/listStyle.css
@@ -1,10 +1,28 @@
 
 form{
-    margin: 20%;
+    margin-top: 15%;
+    display: inline;
+    margin-left: 5%;
 }
 
 body{
     font-size: 200%;
-    display: flex;
-    margin: 5%;
+    margin-top: 10%;
+    text-align: center;
+}
+a{
+    margin:5%
+}
+input{
+    font-size: 150%;
+}
+
+div.button{
+    display: none;
+}
+input.radio:checked+div.button{
+    display: inline-block;
+}
+form.input {
+    display: inline;
 }
